--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.2",
-    "bootstrap-icons": "^1.10.1"
+    "bootstrap-icons": "^1.10.1",
+    "sass": "sass css/style.scss:css/style.css"
   }
 }
